package gof23.commond;

//真正的命令执行者
public class Receiver {
    public void action() {
        System.out.println("action...");
    }
}
